--- a/web/package.json
+++ b/web/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@chakra-ui/react": "^3.29.0",
     "@emotion/react": "^11.14.0",
+    "axios": "^1.13.2",
     "lucide-react": "^0.553.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
