--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,6 +9,7 @@ email-validator==2.3.0
 fastapi==0.121.0
 fastapi-cli==0.0.14
 fastapi-cloud-cli==0.3.1
+greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -32,6 +33,8 @@ rignore==0.7.6
 sentry-sdk==2.43.0
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.44
+sqlmodel==0.0.27
 starlette==0.49.3
 typer==0.20.0
 typing-inspection==0.4.2
