--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,6 +9,7 @@ email-validator==2.3.0
 fastapi==0.121.0
 fastapi-cli==0.0.14
 fastapi-cloud-cli==0.3.1
+fastapi-pagination==0.15.0
 greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
@@ -20,9 +21,11 @@ Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+packaging==25.0
 pydantic==2.12.4
 pydantic_core==2.41.5
 Pygments==2.19.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
@@ -32,7 +35,9 @@ rich-toolkit==0.15.1
 rignore==0.7.6
 sentry-sdk==2.43.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
+sqlakeyset==2.0.1762907931
 SQLAlchemy==2.0.44
 sqlmodel==0.0.27
 starlette==0.49.3
