--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,14 +1,19 @@
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
+bcrypt==4.3.0
 certifi==2025.10.5
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.0
+cryptography==46.0.3
 dnspython==2.8.0
+ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.121.0
 fastapi-cli==0.0.14
 fastapi-cloud-cli==0.3.1
+fastapi-jwt-auth==0.5.0
 fastapi-pagination==0.15.0
 greenlet==3.2.4
 h11==0.16.0
@@ -22,17 +27,23 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 packaging==25.0
+passlib==1.7.4
+pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.12.4
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.3
 requests==2.32.5
 rich==14.2.0
 rich-toolkit==0.15.1
 rignore==0.7.6
+rsa==4.9.1
 sentry-sdk==2.43.0
 shellingham==1.5.4
 six==1.17.0
