--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-photo-view": "^1.2.7",
+    "react-router": "^7.10.0",
     "swr": "^2.3.6"
   },
   "devDependencies": {
